--- a/styles/style.css
+++ b/styles/style.css
@@ -85,14 +85,41 @@ body {
     background-color: #F5F5F5;
     flex: 1;
     display: flex;
+    flex-direction: column;
+    padding: 25px;
 }
 
+/*----------------------------SEARCH DRIVER----------------------------*/
+.tableInputFields {
+    display: flex;
+    margin-bottom: 15px;
+    align-items: center;
+}
+.tableInputFields>span{
+    font-size: 20px;
+}
+
+#searchDriver {
+    width: 250px;
+    height: 30px;
+    margin-right: 15px;
+}
+
+.radioLabelDriver {
+    margin-right: 10px;
+    border-left: 1px dashed black;
+    padding: 10px;
+    align-items: center;
+}
+.radioLabelDriver:first-of-type{
+    border-left: none;
+    margin-left: 15px;
+}
 /*----------------------------TABlE----------------------------*/
 #tableWrapper {
     display: flex;
     height: 500px;
     overflow: auto;
-    margin: 50px;
     width: 100%;
 }
 
@@ -109,9 +136,12 @@ th {
     text-align: center;
     font-size: 18px;
 }
-#driverTable td, th{
+
+#driverTable td,
+th {
     padding: 10px 25px;
 }
+
 th {
     background: #222831;
     position: sticky;
@@ -163,4 +193,61 @@ tr:hover {
 .btnDelete:hover {
     background-color: #F44336;
     color: white;
+}
+.PrikaziVisibility{
+    visibility: visible !important;
+ }
+
+ /*----------------------------MODAL DELETE-----------------------*/
+ #modalDelete{
+    width: 100%;
+    height: 100%;
+    background: rgba(216, 216, 218,.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    visibility: hidden;
+    z-index: 300;
+}
+#modalWrapper{
+    align-items: center;
+    margin: auto;
+    width: 30%;
+    border: 1px solid black;
+}
+#modalWrapperTop{
+    background-color: #222831;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+#modalWrapperTop span{
+    color: white;
+    margin: auto;
+    flex: 1;
+    font-size: 1.5rem;
+    padding: 10px;
+}
+#modalWrapperTop img{
+    width: 50px;
+}
+#zatvoriModalniDetaljnije{
+    cursor: pointer;
+}
+#modalDeleteWrapperContent{
+    background-color: white;
+    padding: 15px;
+}
+#modalDeleteWrapperContent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#modalniDetalji{
+    padding: 3px 25px 3px 5px;
+    cursor: pointer;
+    text-align: left;
 }
