--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,19 @@
     margin: 0;
     padding: 0;
 }
-
+.navLink{
+    text-decoration: none;
+    color: white;
+    width: 100%;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 1px solid white;
+    cursor: pointer;
+    flex: 1;
+    justify-content: center;
+}
 button {
     cursor: pointer;
 }
