--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ body {
 }
 
 /*----------------------------CONTENT----------------------------*/
-#content {
+.content {
     background-color: #F5F5F5;
     flex: 1;
     display: flex;
@@ -509,4 +509,14 @@ tr:hover {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 40px;
+}
+
+/*-------------------------------TRUCKS----------------------------*/
+.modalDeleteTrucks{
+    width: 50% !important;
+}
+#searchTrucks{
+    width: 250px;
+    height: 30px;
+    margin-right: 15px;
 }
