Deleted consol log in different js files, edited html link to tour, added basic funcionality to tour.html - basic data display, wating for id in json respons so i can make modal windows.

--- a/styles/style.css
+++ b/styles/style.css
@@ -382,7 +382,7 @@ tr:hover {
 #addDriverBTN {
     display: flex;
     justify-content: flex-end;
-    margin-top: 30px;
+    margin-top: auto;
 }
 
 #btnAddNewDriver {
@@ -552,5 +552,5 @@ tr:hover {
 #addTruckBTN {
     display: flex;
     justify-content: flex-end;
-    margin-top: 30px;
+    margin-top: auto;
 }
