--- a/styles/style.css
+++ b/styles/style.css
@@ -505,6 +505,7 @@ tr:hover {
         stroke-dashoffset: 900;
     }
 }
+
 #modalSuccess {
     font-size: 30px;
     font-weight: bold;
@@ -512,15 +513,17 @@ tr:hover {
 }
 
 /*-------------------------------TRUCKS----------------------------*/
-.modalDeleteTrucks{
+.modalDeleteTrucks {
     width: 50% !important;
 }
-#searchTrucks{
+
+#searchTrucks {
     width: 250px;
     height: 30px;
     margin-right: 15px;
 }
-#modalAddTruck{
+
+#modalAddTruck {
     width: 100%;
     height: 100%;
     background: rgba(216, 216, 218, .5);
@@ -532,7 +535,8 @@ tr:hover {
     visibility: hidden;
     z-index: 300;
 }
-#closeModalAddTruck{
+
+#closeModalAddTruck {
     cursor: pointer;
 }
 
@@ -549,8 +553,91 @@ tr:hover {
     background-color: #222831;
     color: white;
 }
+
 #addTruckBTN {
     display: flex;
     justify-content: flex-end;
     margin-top: auto;
+}
+
+#addTourBTN {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: auto;
+}
+
+#btnAddNewTour {
+    background-color: white;
+    border: 1px solid #222831;
+    color: #222831;
+    margin-right: 10px;
+    padding: 14px 40px;
+    transition: 0.3s;
+}
+
+#btnAddNewTour:hover {
+    background-color: #222831;
+    color: white;
+}
+
+#modalAddTourWrapperContent {
+    background-color: white;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#modalAddTourDetails {
+    background-color: white;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #393E46;
+    border-radius: 20px;
+}
+#modalSelectDriverTour{
+    background-color: white;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #393E46;
+    border-radius: 20px;
+}
+.modalTourDataDiff{
+    display: flex !important;
+    flex-direction: column !important;
+    margin: 0 15px;
+    padding: 15px !important;
+}
+.modalTourSpecificData{
+    display: flex !important;
+    flex-direction: column !important;
+}
+#modalSelectTruckTour{
+    background-color: white;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #393E46;
+    border-radius: 20px;
+}
+#modalAddTourCards{
+    display: flex;
+    margin-bottom: 50px;
+}
+.modalTourCardHeading{
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+    font-weight: bold;
+    align-self: flex-start;
+}
+.modalTourSpecificDataLabelInputWrapper{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
 }
