--- a/styles/style.css
+++ b/styles/style.css
@@ -641,3 +641,18 @@ tr:hover {
     flex-direction: column;
     margin-bottom: 10px;
 }
+#modalAddTour{
+    width: 100%;
+    height: 100%;
+    background: rgba(216, 216, 218, .5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    visibility: hidden;
+    z-index: 300;
+}
+#closeModalAddTour{
+    cursor: pointer;
+}
