Added modal delete tour, mising functionality delete tour from db no endpoint.

--- a/styles/style.css
+++ b/styles/style.css
@@ -656,3 +656,11 @@ tr:hover {
 #closeModalAddTour{
     cursor: pointer;
 }
+.modalDeleteTour{
+    width: 50% !important;
+}
+#modalDeleteContentTextTour{
+    font-size: 32px;
+    font-weight: bold;
+    margin: 20px 0;
+}
